# CBI-V15

./: .cursorignore  .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  ADD_WORKFLOW_LATER.md  AGENTS.md  AI_GUIDELINES.md  ALL_SETUP_COMPLETE.md  BASE64_ENCODING_FIX.md  BIGQUERY_SETUP_READY.md  BUDGET_COMPLIANCE_REPORT.md  BUDGET_FINAL_SUMMARY.md  CFTC_COT_INGESTION_COMPLETE.md  CLEAN_BASE64_SOLUTION.md  COMPILATION_RESULTS.md  COMPLETE_SETUP_EXECUTION_GUIDE.md  COMPLETE_STATUS.md  CONNECTION_INSTRUCTIONS.md  CONNECTION_READY.md  CONTRIBUTING.md  CORRECT_SOLUTION.md  COST_SUMMARY.md  CREATE_REPO_FIRST.md  CREDENTIALS_STATUS.md  CURRENT_STATUS.md  DATABENTO_FIXES_READY.md  DATABENTO_INGESTION_AUDIT.md  DATAFORM_CONNECTED.md  DATAFORM_CONNECTION_READY.md  DATAFORM_CONNECTION_STEPS.md  DATAFORM_ERROR_DEBUG.md  DATAFORM_GITHUB_CONNECTION.md  DATAFORM_GITHUB_SETUP.md  DATAFORM_NEXT_STEPS.md  DATAFORM_POPULATED.md  DATAFORM_READY_STATUS.md  DATAFORM_REPO_CONNECTION.md  DATAFORM_TEST_RESULTS.md  DATAFORM_URL_GUIDE.md  (+77 more)
_archive/archive_legacy_20251204/: .cbi-v15.zsh  .hyper.js  BQ_AUDIT_RESULTS.txt  LEGACY_WARNING.md  main.py  package-lock.json  package.json  push_to_github.sh  pyproject.toml  requirements-research.txt  requirements.txt  ruff.toml
_archive/archive_legacy_20251204/Models/: README.md
_archive/archive_legacy_20251204/TrainingData/: pruned_feature_list_1m.txt
_archive/archive_legacy_20251204/dashboard/: README.md
_archive/archive_legacy_20251204/includes/: constants.js
_archive/archive_legacy_20251204/scripts/: README.md  audit_bq_simple.sh  (+17 more)
(+1172 files in other folders)
